<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

  <EditText
      android:id="@+id/distance"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:hint="@string/distance"
      android:inputType="number" />
  <EditText
      android:id="@+id/velocity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:hint="@string/velocity"
      android:inputType="number" />

  <Button
      android:id="@+id/calculate"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_marginTop="20dp"
      android:onClick="calculate"
      android:text="@string/calculate" />

  <TextView
      android:id="@+id/totalTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:gravity="center_horizontal"
      android:text="@string/Total_time_Needed" />

  <Button
      android:id="@+id/capture"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_marginTop="20dp"
      android:onClick="launchCamera"
      android:text="@string/launchCamera" />
  <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/captured_photo"
      android:layout_alignParentTop="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true" />

</LinearLayout>

